Fixing Dapr Testcontainer Component test
Signed-off-by: Artur Ciocanu <ciocanu@adobe.com>